Added markdown to Logistic regression model

--- a/FINANCIAL INCLUSION.ipynb
+++ b/FINANCIAL INCLUSION.ipynb
@@ -2631,6 +2631,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "This shows the proprtion of the data points in both the training and test data. Majority of the residual data points have a value of 0. 0 represents do not have a bank account"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Evaluating LogisticRegression Model"
    ]
   },
@@ -2668,6 +2675,19 @@
     "cm_display.plot(cmap='Blues')\n",
     "plt.title('Confusion Matrix - Test Set')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "True Positive(1,1) = The model correctly predicted that 4989 individuals qualify for a bank account and indeed they do.\n",
+    "\n",
+    "True Negative(0,0) = The model correctly predicted that 5660 individuals do not qualify for a bank account and indeed they do not.\n",
+    "\n",
+    "False Positive(1,0) = The model predicted that 1083 individuals qualify for a bank account but they do not qualify to open a bank account. The model approved unqualified applicants.\n",
+    "\n",
+    "False Negative(0,1) =  The model predicted that 396 individuals do not qualify for a bank account but they do  qualify to open a bank account. The model rejected qualified applicants."
    ]
   },
   {
@@ -2728,6 +2748,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The model was precise in its prediction 93% of the time and out of all the positive outcomes the model correct 82% of the time"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Testing the model using new data: i.e Test data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 161,
    "metadata": {},
@@ -2779,6 +2813,13 @@
    "source": [
     "testing_model = logreg.predict(test1_scaled)\n",
     "testing_model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Predictions made by the model above"
    ]
   },
   {
@@ -2908,6 +2949,13 @@
     "predicted_label_distribution = predicted_labels_df['predicted_label'].value_counts(normalize=True)\n",
     "print(\"Distribution of Predicted Labels:\")\n",
     "print(predicted_label_distribution)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From the model prediction, we can see that do not qualify to open a bank account are still the majority with 88%."
    ]
   },
   {
